--- a/web/nginx_static.conf
+++ b/web/nginx_static.conf
@@ -45,7 +45,7 @@ server {
                 proxy_pass https://localhost/;
         }
 
-        location = /basic_status {
+        location = /stub_status {
                 stub_status;
         }
 }
