--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,12 @@
 version: '3.7'
 
+networks:
+  backend_net:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.77.0.0/24
+
 services:
   web:
     image: mydebian-ssh
@@ -8,6 +15,9 @@ services:
       - 22
       - 80
       - 443
+    networks:
+      backend_net:
+        ipv4_address: 172.77.0.2
   monitoring:
     image: mydebian-ssh
     env_file: .docker.env
@@ -15,9 +25,27 @@ services:
       - 22
       - 80
       - 443
+      - 3000
       - 9090
+    # Override ulimits pro monitoring
+    # Vychozi stav se propisuje z host systemu, grafana vyzaduje vice
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 20000
+        hard: 40000
+    networks:
+      backend_net:
+        ipv4_address: 172.77.0.3
+
   nginx-exporter:
+    depends_on:
+      - web
+      - monitoring
     image: nginx/nginx-prometheus-exporter:0.10.0
     ports:
       - 9113
-    command: "-nginx.scrape-uri=http://172.19.0.2:8080/stub_status"
+    command: "-nginx.scrape-uri=http://172.77.0.2:8080/stub_status"
+    networks:
+      backend_net:
+        ipv4_address: 172.77.0.4
