--- a/web/nginx_static.conf
+++ b/web/nginx_static.conf
@@ -6,7 +6,7 @@ server {
         include ssl-params.conf;
 
         # Redirect HTTP -> HTTPS
-        return 302 https://$server_name$request_uri;
+        return 302 https://$host$request_uri;
 }
 
 server {
