--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -45,3 +45,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: [ "172.77.0.4:9113" ]
+
+  - job_name: etcd
+    static_configs:
+    - targets: ['172.77.0.10:2379','172.77.0.11:2379','172.77.0.12:2379']
