--- a/etcd_install_playbook.yaml
+++ b/etcd_install_playbook.yaml
@@ -7,18 +7,11 @@
         state: present
         update_cache: yes
 
-    - name: Ensure conf dir exists
-      file:
-        path: "/etc/etcd"
-        state: directory
+    - name: Kill all running etcd instances
+      command: killall -q etcd
+      register: result
+      failed_when: "result.rc not in [0, 1]"
 
-    - name: Copy etcd config
-      copy:
-        src: "{{ playbook_dir }}/etcd/etcd.conf.infra{{ ansible_host[-1:] }}.yml"
-        dest: "/etc/etcd/etcd.conf.yml"
-
-    - name: Start etcd service
-      service:
-        name: etcd
-        state: restarted
-        args: " --config_file /etc/etcd/etcd.conf.yml"
+    - name: Start etcd
+      script:
+        cmd: "{{ playbook_dir }}/etcd/etcd.infra{{ ansible_host[-1:] }}.sh"
