--- a/roles/ansible-grafana-config/handlers/main.yml
+++ b/roles/ansible-grafana-config/handlers/main.yml
@@ -6,6 +6,7 @@
     state: restarted
   tags:
     - grafana_run
+  failed_when: "1 == 0"
 
 - name: Set privileges on provisioned dashboards
   become: true
