--- a/web/nginx_static.conf
+++ b/web/nginx_static.conf
@@ -32,17 +32,16 @@ server {
         server_name _;
         root /var/www/html;
 
-
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
-
+        proxy_ssl_protocols TLSv1.3;
         proxy_set_header Connection "";
         
         # Protoze HTTP/1 neumi keepalive
         proxy_http_version 1.1;
 
         location /proxy {
-                proxy_pass https://localhost/;
+                proxy_pass https://localhost:443/;
         }
 
         location = /stub_status {
