readme update, fix nginx

--- a/web/nginx_static.conf
+++ b/web/nginx_static.conf
@@ -5,6 +5,10 @@ server {
 
         include ssl-params.conf;
 
+        location / {
+                try_files $uri $uri/ =404;
+        }
+
         # Redirect HTTP -> HTTPS
         return 302 https://$host$request_uri;
 }
