add docker checking

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,8 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-#inventory       = /etc/ansible/hosts
+interpreter_python = /usr/bin/python3
+inventory       = ./inventory
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils    = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
 #remote_tmp      = ~/.ansible/tmp
